add support for linking with system pugixml
- introduce option USE_SYSTEM_PUGIXML (sug. by Michael)
- default is USE_SYSTEM_PUGIXML=OFF
- USE_SYSTEM_PUGIXML=OFF: compile with provided pugixml.cpp
- USE_SYSTEM_PUGIXML=ON: link with found libpugixml
- Abort with helpful error msg if USE_SYSTEM_PUGIXML=ON
but the library is not found by the FindPugiXML module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
 project(ISMRMRD)
 
+# command line options
+option(USE_SYSTEM_PUGIXML "Use pugixml installed on the system" OFF)
+
 # add project specific cmake find modules
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
@@ -85,26 +88,48 @@ set(ISMRMRD_SOVERSION ${ISMRMRD_VERSION_MAJOR}.${ISMRMRD_VERSION_MINOR})
 find_package(HDF5 1.8 COMPONENTS C REQUIRED)
 
 # include directories for main library
-include_directories(
+set(ISMRMRD_TARGET_INCLUDE_DIRS
   include
   ${HDF5_C_INCLUDE_DIR}
 )
 
-# main library
-add_library(ismrmrd SHARED 
+set(ISMRMRD_TARGET_SOURCES
   libsrc/ismrmrd.c
   libsrc/ismrmrd.cpp
   libsrc/dataset.c
   libsrc/dataset.cpp
   libsrc/xml.cpp
   libsrc/meta.cpp
-  libsrc/pugixml.cpp
 )
+
+set(ISMRMRD_TARGET_LINK_LIBS ${HDF5_LIBRARIES})
+
+# optional handling of system-installed pugixml
+if(USE_SYSTEM_PUGIXML)
+  find_package(PugiXML)
+  if(PugiXML_FOUND)
+    message("Found system pugixml: ${PugiXML_INCLUDE_DIR} ${PugiXML_LIBRARY}")
+    list(APPEND ISMRMRD_TARGET_INCLUDE_DIRS ${PugiXML_INCLUDE_DIR})
+    list(APPEND ISMRMRD_TARGET_LINK_LIBS ${PugiXML_LIBRARY})
+  else(PugiXML_FOUND)
+    message(FATAL_ERROR "Pugixml library not found on the system, try without "
+    "setting USE_SYSTEM_PUGIXML to use the version provided in the source "
+    "tree.")
+  endif(PugiXML_FOUND)
+  list(APPEND ISMRMRD_TARGET_INCLUDE_DIRS ${PugiXML_INCLUDE_DIR})
+  list(APPEND ISMRMRD_TARGET_LINK_LIBS ${PugiXML_LIBRARY})
+else(USE_SYSTEM_PUGIXML)
+  list(APPEND ISMRMRD_TARGET_SOURCES libsrc/pugixml.cpp)
+endif(USE_SYSTEM_PUGIXML)
+
+# main library
+include_directories(${ISMRMRD_TARGET_INCLUDE_DIRS})
+add_library(ismrmrd SHARED ${ISMRMRD_TARGET_SOURCES})
 set_target_properties(ismrmrd PROPERTIES
   VERSION ${ISMRMRD_VERSION_STRING}
   SOVERSION ${ISMRMRD_SOVERSION}
 )
-target_link_libraries(ismrmrd ${HDF5_LIBRARIES})
+target_link_libraries(ismrmrd ${ISMRMRD_TARGET_LINK_LIBS})
 
 # install the main library
 install(TARGETS ismrmrd DESTINATION lib)
