reorganizing Doxygen documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,11 +131,11 @@ DESTINATION
 enable_testing()
 
 # process subdirectories
+add_subdirectory(doc)
 #add_subdirectory(examples/c++)
 #add_subdirectory(examples/c)
 #add_subdirectory(utilities)
 #add_subdirectory(tests)
-#add_subdirectory(doc)
 #add_subdirectory(matlab)
 #add_subdirectory(bindings)
 add_subdirectory(info)
