--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,6 +1,10 @@
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
-	add_subdirectory(doxygen)
+    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
+    add_custom_target(doc ${DOXYGEN_EXECUTABLE}
+        ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        COMMENT "Generating API documentation with Doxygen" VERBATIM)
+    add_custom_target(apidoc DEPENDS doc)
 else(DOXYGEN_FOUND)
-	MESSAGE("Doxygen not found. Will not be able to build documentation")
+    MESSAGE("Doxygen not found. Will not be able to build documentation")
 endif(DOXYGEN_FOUND)
