MH:CMakeLists file fixed so code compiles on Windows

--- a/utilities/CMakeLists.txt
+++ b/utilities/CMakeLists.txt
@@ -1,6 +1,10 @@
 find_package(Boost COMPONENTS program_options)
 find_package(FFTW3 COMPONENTS single)
 
+if(WIN32)
+    link_directories(${Boost_LIBRARY_DIRS})
+endif(WIN32)
+
 if(FFTW3_FOUND)
     message("FFTW3 Found, building utilities")
     include_directories(
@@ -12,10 +16,16 @@ if(FFTW3_FOUND)
     add_executable(ismrmrd_generate_cartesian_shepp_logan
         generate_cartesian_shepp_logan.cpp
         ismrmrd_phantom.cpp)
-    target_link_libraries( ismrmrd_generate_cartesian_shepp_logan
-        ismrmrd
-        ${Boost_PROGRAM_OPTIONS_LIBRARY}
-        ${FFTW3_LIBRARIES})
+    if(WIN32)
+        target_link_libraries( ismrmrd_generate_cartesian_shepp_logan
+            ismrmrd
+            ${FFTW3_LIBRARIES})
+    else(WIN32)
+        target_link_libraries( ismrmrd_generate_cartesian_shepp_logan
+            ismrmrd
+            ${Boost_PROGRAM_OPTIONS_LIBRARY}
+            ${FFTW3_LIBRARIES})
+    endif(WIN32)
     install(TARGETS ismrmrd_generate_cartesian_shepp_logan
 			DESTINATION bin)
 
