win install hdf5 dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,7 @@ if (WIN32)
                 set(HDF5_BIN_DIR ${HDF5_C_INCLUDE_DIR}/../bin)
             endif (DEFINED ENV{HDF5_ROOT})
             message("Install hdf5 libraries from ${HDF5_BIN_DIR} ")
-            install( DIRECTORY ${HDF5_BIN_DIR} DESTINATION lib FILES_MATCHING PATTERN "*.dll" )
+            install( DIRECTORY ${HDF5_BIN_DIR} DESTINATION bin/.. FILES_MATCHING PATTERN "*.dll" )
         endif (HDF5_FOUND)
     endif (ISMRMRD_INSTALL_DEPENDENCIES)
 endif (WIN32)
