add cpack nsis install name

--- a/cmake/cpack_options.cmake.in
+++ b/cmake/cpack_options.cmake.in
@@ -32,6 +32,7 @@ set(CPACK_RPM_PACKAGE_DESCRIPTION "Implementation of the ISMRMRD format.")
 set(CPACK_NSIS_HELP_LINK "http:\\\\\\\\ismrmrd.sourceforge.net")
 set(CPACK_NSIS_URL_INFO_ABOUT "http:\\\\\\\\ismrmrd.sourceforge.net")
 set(CPACK_NSIS_MODIFY_PATH ON)
+set(CPACK_NSIS_DISPLAY_NAME "ismrmrd")
 
 # Output filename of the generated tarball / package
 set(CPACK_PACKAGE_FILE_NAME "@PROJECT_NAME_LOWER@-@ISMRMRD_VERSION_STRING@")
