Changed the SHA1 hash variable to be a define to pevent problems from multiple includes

--- a/info/ismrmrd_version.in
+++ b/info/ismrmrd_version.in
@@ -4,7 +4,6 @@
 #define ISMRMRD_VERSION_MAJOR @ISMRMRD_VERSION_MAJOR@
 #define ISMRMRD_VERSION_MINOR @ISMRMRD_VERSION_MINOR@
 #define ISMRMRD_VERSION_PATCH @ISMRMRD_VERSION_PATCH@
-
-const char* ismrmrd_git_sha1 = "@ISMRMRD_GIT_SHA1@";
+#define ISMRMRD_GIT_SHA1_HASH "@ISMRMRD_GIT_SHA1@"
 
 #endif //ISMRMRD_VERSION_H
