--- a/include/version.in
+++ b/include/version.in
@@ -4,6 +4,7 @@
 #define ISMRMRD_VERSION_MAJOR @ISMRMRD_VERSION_MAJOR@
 #define ISMRMRD_VERSION_MINOR @ISMRMRD_VERSION_MINOR@
 #define ISMRMRD_VERSION_PATCH @ISMRMRD_VERSION_PATCH@
+#define ISMRMRD_XMLHDR_VERSION @ISMRMRD_VERSION_MINOR@
 #define ISMRMRD_GIT_SHA1_HASH "@ISMRMRD_GIT_SHA1@"
 
 #endif //ISMRMRD_VERSION_H
