--- a/utilities/CMakeLists.txt
+++ b/utilities/CMakeLists.txt
@@ -1,3 +1,11 @@
+# Build the info application
+message("Building info application")
+include_directories(${CMAKE_BINARY_DIR}/include
+                               ${CMAKE_SOURCE_DIR}/include)
+add_executable(ismrmrd_info ismrmrd_info.cpp)
+target_link_libraries(ismrmrd_info ismrmrd)
+ install(TARGETS ismrmrd_info DESTINATION bin)
+
 find_package(Boost COMPONENTS program_options)
 find_package(FFTW3 COMPONENTS single)
 
