Fixed dataset methods to return void and only throw exceptions.  Removed unused c++ examples.  Added c example to the build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,8 +196,7 @@ enable_testing()
 
 # process subdirectories
 add_subdirectory(doc)
-#add_subdirectory(examples/c++)
-#add_subdirectory(examples/c)
+add_subdirectory(examples/c)
 add_subdirectory(utilities)
 #add_subdirectory(tests)
 #add_subdirectory(matlab)
