--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,7 +196,7 @@ enable_testing()
 
 # process subdirectories
 add_subdirectory(doc)
-add_subdirectory(examples/c)
+#add_subdirectory(examples/c)
 add_subdirectory(utilities)
 #add_subdirectory(matlab)
 #add_subdirectory(bindings)
