Made c bits c89 compatible for windows visual studio compatibility.

--- a/include/version.in
+++ b/include/version.in
@@ -7,4 +7,4 @@
 #define ISMRMRD_XMLHDR_VERSION @ISMRMRD_VERSION_MINOR@
 #define ISMRMRD_GIT_SHA1_HASH "@ISMRMRD_GIT_SHA1@"
 
-#endif //ISMRMRD_VERSION_H
+#endif /* ISMRMRD_VERSION_H */
