Cleaning out old python swig bindings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,10 +198,11 @@ enable_testing()
 add_subdirectory(doc)
 add_subdirectory(examples/c)
 add_subdirectory(utilities)
-#add_subdirectory(bindings)
 
 # install the matlab api
 install(DIRECTORY matlab DESTINATION share/ismrmrd)
+
+# TODO build and install the python bindings
 
 # Create package
 string(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)
