Packaging: lib, dev, utils packages created

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,13 +177,13 @@ set_target_properties(ismrmrd PROPERTIES
 target_link_libraries(ismrmrd ${ISMRMRD_TARGET_LINK_LIBS})
 
 # install the main library
-install(TARGETS ismrmrd DESTINATION lib COMPONENT main)
+install(TARGETS ismrmrd DESTINATION lib COMPONENT lib)
 
 # install the headers
 install(DIRECTORY include/ismrmrd  DESTINATION include COMPONENT dev)
 
 # install the schema file
-install(FILES schema/ismrmrd.xsd DESTINATION share/ismrmrd/schema COMPONENT main)
+install(FILES schema/ismrmrd.xsd DESTINATION share/ismrmrd/schema COMPONENT lib)
 
 # install the cmake modules
 install(FILES cmake/FindIsmrmrd.cmake cmake/FindFFTW3.cmake cmake/FindNumPy.cmake DESTINATION share/ismrmrd/cmake COMPONENT dev)
@@ -216,18 +216,12 @@ set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 
 # Enable/Disable component install for CPack generator DEB
 set(CPACK_DEB_COMPONENT_INSTALL ON)
-#set(CPACK_COMPONENTS_IGNORE_GROUPS ON)
 set(CPACK_DEB_PACKAGE_COMPONENT ON)
 
-#set(CPACK_COMPONENTS_GROUPING ONE_PER_GROUP)
-
 # Set component dependencies explicitly
-set(CPACK_DEB_main_PACKAGE_DEPENDS "libhdf5-7, libfftw3-3, libboost-program-options-dev")
-set(CPACK_DEB_dev_PACKAGE_DEPENDS "ismrmrd-main")
-#set(CPACK_DEB_cmake_PACKAGE_DEPENDS "libhdf5-7, libfftw3-3, libboost-program-options-dev")
-#set(CPACK_DEB_schema_PACKAGE_DEPENDS "libhdf5-7, libfftw3-3, libboost-program-options-dev")
-#set(CPACK_DEB_headers_PACKAGE_DEPENDS "libhdf5-7, libfftw3-3, libboost-program-options-dev")
-#set(CPACK_DEB_libraries_PACKAGE_DEPENDS "libhdf5-7, libfftw3-3, libboost-program-options-dev")
+set(CPACK_DEB_lib_PACKAGE_DEPENDS "libhdf5-7, libfftw3-3, libboost-program-options-dev")
+set(CPACK_DEB_dev_PACKAGE_DEPENDS "ismrmrd-lib")
+set(CPACK_DEB_utils_PACKAGE_DEPENDS "ismrmrd-lib")
 
 # Where the package metadata are
 set(ISMRMRD_CPACK_CFG_FILE "${PROJECT_BINARY_DIR}/cpack_options.cmake")
@@ -246,11 +240,10 @@ if(CPACK_GENERATOR)
   set(CPACK_PROJECT_CONFIG_FILE ${ISMRMRD_CPACK_CFG_FILE})
   
   # A list containing the names of all components that should be installed
-  set(CPACK_COMPONENTS_ALL main dev)
-  include (CPack)
+  set(CPACK_COMPONENTS_ALL lib dev utils)
+  include(CPack)
 
   ##############################################################
-
 
   # Component groups
   #cpack_add_component_group(EndUser)
@@ -265,8 +258,6 @@ if(CPACK_GENERATOR)
   #  DISPLAY_NAME "Dev"
   #  DESCRIPTION "Dev"
   #  GROUP Developer)
-
-
 
  ## Installation types
   #cpack_add_install_type(Runtime DISPLAY_NAME "Runtime Files")
